--- a/estilos/style.css
+++ b/estilos/style.css
@@ -8,3 +8,49 @@
 
 */
 
+:root{
+    --cor1:#49a09d;
+    --cor2:#5f2c82;
+}
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+body, html{
+    background-color: var(--cor2);
+    height: 100vh;
+    width: 100vw;
+}
+main{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+section#login{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+    background-color: white;
+    width:250px;
+    height: 500px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.363) ;
+
+}
+
+section#login > div#imagem{
+    display: block;
+    background: url(../imagens/metal.jpg) no-repeat center top; 
+    background-size: cover;
+    height: 200px;
+}
+
+section#login > div#formulario{
+    display: block;
+    padding: 10px;
+    
+}
