--- a/estilos/style.css
+++ b/estilos/style.css
@@ -40,11 +40,14 @@ section#login{
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.363) ;
 
+    transition: width 0.2s, height 0.2s;
+    transition-timing-function: ease;
+
 }
 
 section#login > div#imagem{
     display: block;
-    background: url(../imagens/metal.jpg) no-repeat center top; 
+    background: url(../imagens/metal.jpg) no-repeat center top fixed; 
     background-size: cover;
     height: 200px;
 }
@@ -52,5 +55,5 @@ section#login > div#imagem{
 section#login > div#formulario{
     display: block;
     padding: 10px;
-    
+
 }
