--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -29,12 +29,18 @@
         width: 950px;
     }
     section#login > div#imagem{
-        float: left;
+        float: right;
         width: 40%;
         height: 100%;
     }
     section#login > div#formulario{
-        float: right;
+        float: left;
         width: 60%;
+    }
+    div#formulario > p{
+        font-size: 1.2em;
+    }
+    div#formulario > h1{
+        font-size: 2em;
     }
 }
