--- a/estilos/style.css
+++ b/estilos/style.css
@@ -35,7 +35,7 @@ section#login{
     transform: translate(-50%, -50%);
     overflow: hidden;
     background-color: white;
-    width:250px;
+    width:290px;
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.363) ;
@@ -65,3 +65,49 @@ div#formulario > h1{
 div#formulario > p{
     font-size: 0.8em;
 }
+form > div.campo{
+    display: block;
+    background-color: var(--cor2);
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0;
+}
+div.campo > label{
+    display: none;
+}
+form > input[type=submit]{
+    display: block;
+    font-size: 1em;
+    width:100%;
+    height: 40px;
+    background-color: var(--cor1);
+    color: white;
+    border:none;
+    border-radius: 5px;
+    cursor:pointer;
+}
+form > input[type=submit]:hover{
+    background-color: #306b69;
+}
+form > a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top:5px;
+    margin-top: 5px;
+    background-color: #62d9d5;
+    border: 1px solid #49a09d;
+    border-radius: 5px;
+    text-decoration: none;
+    color: #244f4d
+}
+form > a.botao:hover{
+    background-color: #79e6e2;
+    transition-duration: 0.3s;
+}
+form > a.botao > span{
+    font-size: 0.8em;
+} 
