--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -5,11 +5,13 @@
 }
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
+    
     body{
         background-image: linear-gradient(to top, var(--cor1), var(--cor2));
     }
     section#login{
         width: 80vw;
+        height: 300px;
     }
     section#login > div#imagem{
         float: left;
@@ -27,6 +29,7 @@
     }
     section#login{
         width: 950px;
+        height: 500px;
     }
     section#login > div#imagem{
         float: right;
