--- a/estilos/style.css
+++ b/estilos/style.css
@@ -76,6 +76,26 @@ form > div.campo{
 div.campo > label{
     display: none;
 }
+div.campo > span{
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+div.campo > input{
+    background-color: #85cecb;
+    font-size: 1em;
+    width: calc(100% - 48px);
+    transform: translateY(-10px);
+   height: 90%;
+   border: 0px;
+   border-radius: 5px;
+   padding: 4px;
+   
+}
+div.campo > input:focus-within{
+    background-color: white;
+}
 form > input[type=submit]{
     display: block;
     font-size: 1em;
