--- a/estilos/style.css
+++ b/estilos/style.css
@@ -24,22 +24,20 @@ body, html{
     width: 100vw;
 }
 main{
-    position: relative;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
     height: 100vh;
     width: 100vw;
 }
 section#login{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    
     overflow: hidden;
     background-color: white;
     width:290px;
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.363) ;
-    transform: translate(-50%, -50%);
     transition: width 0.2s, height 0.2s;
     transition-timing-function: ease;
 
@@ -47,7 +45,8 @@ section#login{
 
 section#login > div#imagem{
     display: block;
-    background: url(../imagens/metal.jpg) no-repeat center top fixed; 
+    background: url(../imagens/metal.jpg) no-repeat center center;
+    background-attachment: scroll; 
     background-size: cover;
     height: 200px;
 }
